Add ZGC flags